# Social-Recommendation-System

./: .gitignore  README.md  demo.py  pyproject.toml  requirements.txt  test_system.py
.github/workflows/: ci.yml
configs/: config.yaml
notebooks/: example_usage.py
scripts/: train.py
src/data/: __init__.py  generator.py
src/models/: __init__.py
src/utils/: __init__.py
tests/: test_social_recommender.py
